[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ladwp_energy_cost"
version = "0.5.1"
description = "LADWP Energy Cost Calculator integration for Home Assistant"
readme = "README.md"
authors = [
    {name = "Zeeshan Haque", email = "zphoenixrises@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10.0"
dependencies = [
    "homeassistant>=2023.1.0",
    "voluptuous>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "venv", ".venv"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88 